adding themeing & localization setting_page.dart

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -9,7 +9,7 @@
   "quran": "القران",
   "language": "اللغه",
   "theme": "نسق",
-  "english": "اللغه العربيه",
+  "english": "العربيه",
   "numberOfTasbeh": "عدد التسابيح",
   "radioOfEthicsQuran": "إذاعة القرآن الكريم"
 }
