--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -8,7 +8,7 @@
   "radio": "Radio",
   "quran": "Quran",
   "language": "Language",
-  "theme": "Theme",
+  "theme": "Theming",
   "english": "English",
   "numberOfTasbeh": "Number Of Tasbeh",
   "radioOfEthicsQuran": "Radio Of Ethics Quran"
