make the app_more performance than before by using provider as statemangment

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -11,5 +11,7 @@
   "theme": "نسق",
   "english": "العربيه",
   "numberOfTasbeh": "عدد التسابيح",
-  "radioOfEthicsQuran": "إذاعة القرآن الكريم"
+  "radioOfEthicsQuran": "إذاعة القرآن الكريم",
+  "darkTheme": "غامق",
+  "lightTheme": "فاتح"
 }
